fix: viewport height on mobile

--- a/src/components/image-filter-preview.css
+++ b/src/components/image-filter-preview.css
@@ -2,17 +2,11 @@
   margin-top: 40px;
 }
 
-.filter-preview__selected img {
-  width: 100vw !important;
-  max-width: 700px;
-  height: auto !important;
-  height: 70vh;
-}
-
 .filter-preview__selected {
   width: 100%;
   text-align: center;
   height: 70vh;
+  height: calc(var(--vh, 1vh) * 70);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -27,6 +21,7 @@
   overflow-x: auto;
   overflow-y: hidden;
   height: 20vh;
+  height: calc(var(--vh, 1vh) * 20);
   margin-top: 1vh;
 }
 
@@ -37,6 +32,7 @@
   flex-direction: column;
   align-items: center;
   height: 20vh;
+  height: calc(var(--vh, 1vh) * 20);
 }
 
 .filter-preview__filter:first-child {
@@ -51,6 +47,7 @@
   position: relative;
   width: 33vw;
   height: 25vh;
+  height: calc(var(--vh, 1vh) * 25);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
